samples/_failures_safe/1761425514_11b4ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d2c644c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8d2c644c.c:164:9: error: expected declaration or statement at end of input
  164 |         tokens[token_count].value[0] = '\0';
      |         ^~~~~~
./samples/SAFE/__tmp_8d2c644c.c:164:9: error: expected declaration or statement at end of input
